# smart_task_manager_with_AI

./: .editorconfig  .gitignore  .pre-commit-config.yaml  Makefile  PROJECT_SUMMARY.md  QUICK_START.md  README.md  SETUP_INSTRUCTIONS.md  START_APPLICATION.bat  VAPID_SETUP.md  WINDOWS_SETUP.md  api-test.http  setup_vapid_keys.bat  setup_vapid_keys.sh  userdata.sh
backend/: alembic.ini  pyproject.toml  requirements.txt  run.bat  seed.bat  setup.bat
backend/alembic/: env.py  script.py.mako
backend/app/: __init__.py  db.py  main.py
backend/app/api/: ai.py  analytics.py  auth.py  notifications.py  tasks.py
backend/app/core/: config.py  email.py  scheduler.py  security.py
backend/app/jobs/: __init__.py  reminder_job.py
backend/app/models/: __init__.py  notification.py  push_subscription.py  task.py  user.py
backend/app/schemas/: auth.py  task.py
backend/app/services/: ai_service.py  notification_service.py  task_service.py
backend/scripts/: generate_vapid_keys.bat  generate_vapid_keys.py  generate_vapid_keys.sh  seed.py
backend/tests/: conftest.py
backend/tests/integration/: test_api.py
backend/tests/unit/: test_auth.py  test_tasks.py
docs/: API.md  ARCHITECTURE.md  DEPLOYMENT.md  ROADMAP.md  TESTING.md
frontend/: index.html  package-lock.json  package.json  playwright.config.ts  run.bat  setup.bat  tsconfig.json  vite.config.ts
frontend/e2e/: login.spec.ts
frontend/public/: service-worker.js
frontend/src/: App.tsx  main.tsx  service-worker.js  service-worker.ts  vite-env.d.ts
infra/: docker-compose.yml
infra/docker/: backend.Dockerfile  (+1 more)
(+25 files in other folders)
